fixed small alignment on left side of footer

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -22,6 +22,7 @@
 
 .location{
     display: flex;
+    align-items: center;
     margin-bottom: 0.8rem;
 }
 
